--- a/acerca.html
+++ b/acerca.html
@@ -136,10 +136,10 @@
 
       function mediaQuery() {
         if (consulta.matches) {
-          $burguerButton.addEventListener('touchstart', toggleMenu);
+          //$burguerButton.addEventListener('touchstart', toggleMenu);
           $burguerButton.addEventListener('click', toggleMenu);
         } else {
-          $burguerButton.removeEventListener('touchstart', toggleMenu);
+          //$burguerButton.removeEventListener('touchstart', toggleMenu);
           $burguerButton.removeEventListener('click', toggleMenu);
         }
       }
