--- a/precios.html
+++ b/precios.html
@@ -318,10 +318,10 @@
 
       function mediaQuery() {
         if (consulta.matches) {
-          $burguerButton.addEventListener('touchstart', toggleMenu);
+          //$burguerButton.addEventListener('touchstart', toggleMenu);
           $burguerButton.addEventListener('click', toggleMenu);
         } else {
-          $burguerButton.removeEventListener('touchstart', toggleMenu);
+          //$burguerButton.removeEventListener('touchstart', toggleMenu);
           $burguerButton.removeEventListener('click', toggleMenu);
         }
       }
