--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
       </article>
       <article class="dinosaurio"> 
-        <img class="derecha" data-src="images/edino.png|images/edino2x.png"  alt="Dinosaurio" width="350"/>
+        <img class="derecha" data-src="images/edino.png|images/edino2x.png"  alt="Dinosaurio Spinosaurus" width="350"/>
         <div class="contenedor-dinosaurio-a">
           <h3 class="title-b">Spinosaurus</h3>
           <ol>
