--- a/precios.html
+++ b/precios.html
@@ -189,14 +189,14 @@
         <div class="tablax4">
           <div class="caja-precio">
             <div class="icono-precio"><i class="fa fa-cubes" aria-hidden="true"></i></div>
-            <div><h4>Plan Uno</h4></div>
+            <div><h4>Plan reptil</h4></div>
             <div class="precio-1"><span class="dolar">$</span>5<span class="mes">/mensuales</span></div>
             <div>
               <ul class="lista-precios">
-                <li class="lista-espacios">Hosting 2GB</li>
-                <li class="lista-espacios">10 Bases de Datos</li>
-                <li class="lista-espacios">Correos Iliminatos</li>
-                <li class="lista-espacios">Admin. Cpanel</li>
+                <li class="lista-espacios">Noticias ilimitadas</li>
+                <li class="lista-espacios">10 croquetas Tyrannosaurus</li>
+                <li class="lista-espacios">Ducha semanal para tu mascota</li>
+                <li class="lista-espacios">Una sorpresa quincenal</li>
               </ul>
             </div>
             <div class="boton-contratar"><a href="#" class="contratar-a">Contratar</a></div>
@@ -206,7 +206,7 @@
         <div class="tablaxd">
           <div class="caja-precio destacado">
             <div class="icono-precio"><i class="fa fa-cubes" aria-hidden="true"></i></div>
-            <div><h4>Plan Dos</h4></div>
+            <div><h4>Plan legendario</h4></div>
             <div>
               <i class="fa fa-star" aria-hidden="true"></i>
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -218,10 +218,10 @@
             <div class="precio-1"><span class="dolar">$</span>95<span class="mes">/mensuales</span></div>
             <div>
               <ul class="lista-precios">
-                <li class="lista-espacios">Hosting 2GB</li>
-                <li class="lista-espacios">10 Bases de Datos</li>
-                <li class="lista-espacios">Correos Iliminatos</li>
-                <li class="lista-espacios">Admin. Cpanel</li>
+                <li class="lista-espacios">Noticias ilimitadas</li>
+                <li class="lista-espacios">500 croquetas Spinosaurus premium</li>
+                <li class="lista-espacios">Entrada a Jurassic Park</li>
+                <li class="lista-espacios">Una sorpresa diaria</li>
               </ul>
             </div>
             <div class="boton-contratar"><a href="#" class="contratar-a">Contratar</a></div>
@@ -231,14 +231,14 @@
         <div class="tablax4">
           <div class="caja-precio">
             <div class="icono-precio"><i class="fa fa-cubes" aria-hidden="true"></i></div>
-            <div><h4>Plan Tres</h4></div>
+            <div><h4>Plan gigante marino</h4></div>
             <div class="precio-1"><span class="dolar">$</span>15<span class="mes">/mensuales</span></div>
             <div>
               <ul class="lista-precios">
-                <li class="lista-espacios">Hosting 2GB</li>
-                <li class="lista-espacios">10 Bases de Datos</li>
-                <li class="lista-espacios">Correos Iliminatos</li>
-                <li class="lista-espacios">Admin. Cpanel</li>
+                <li class="lista-espacios">Noticias ilimitadas</li>
+                <li class="lista-espacios">100 croquetas Triceratops</li>
+                <li class="lista-espacios">Jugete de Gotzilla o King-Kong</li>
+                <li class="lista-espacios">Una sorpresa semanal</li>
               </ul>
             </div>
             <div class="boton-contratar"><a href="#" class="contratar-a">Contratar</a></div>
