--- a/precios.html
+++ b/precios.html
@@ -146,40 +146,40 @@
         <br>
       </div>
     </section>
-    <section class="seccion contenedor">
+    <section class="seccion contenedor servicios">
       <h2>Nuestros servicios</h2>
       <section class="contenedor-columnas">
         <div class="columnasx3">
-          <h4>Título Servicios</h4>
-          <i class="fa fa-paper-plane fa-4x" aria-hidden="true"></i>
-          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, nostrum dolor omnis, ipsam nisi voluptate! Asperiores beatae ex cupiditate alias quaerat sed ad natus, saepe distinctio veniam? Error natus, dolore!</p>
+          <h4>Alimentaci&oacuten</h4>
+          <i class="fa fa-cutlery fa-4x" aria-hidden="true"></i>
+          <p align="justify">Mantenemos feliz al ser que tanto te alegra los d&iacute con alimentos saludables para &eacutel</p>
         </div>
         <div class="columnasx3">
-          <h4>Título Servicios</h4>
-          <i class="fa fa-paper-plane fa-4x" aria-hidden="true"></i>
-          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, nostrum dolor omnis, ipsam nisi voluptate! Asperiores beatae ex cupiditate alias quaerat sed ad natus, saepe distinctio veniam? Error natus, dolore!</p>
+          <h4>Spa</h4>
+          <i class="fa fa-magic fa-4x" aria-hidden="true"></i>
+          <p align="justify">Con los mejores expertos nos encargamos de relajar a tu mascota cuando se encuentre de mal humor.</p>
         </div>
         <div class="columnasx3">
-          <h4>Título Servicios</h4>
-          <i class="fa fa-paper-plane fa-4x" aria-hidden="true"></i>
-          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, nostrum dolor omnis, ipsam nisi voluptate! Asperiores beatae ex cupiditate alias quaerat sed ad natus, saepe distinctio veniam? Error natus, dolore!</p>
+          <h4>Salud</h4>
+          <i class="fa fa-heart-o fa-4x" aria-hidden="true"></i>
+          <p align="justify">Con el mejor hospital para dinosaurios, atenderemos con gusto a tu amigo cuando lo necesite.</p>
         </div>
       </section>
       <section class="contenedor-columnas">
         <div class="columnasx3">
-          <h4>Título Servicios</h4>
-          <i class="fa fa-paper-plane fa-4x" aria-hidden="true"></i>
-          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, nostrum dolor omnis, ipsam nisi voluptate! Asperiores beatae ex cupiditate alias quaerat sed ad natus, saepe distinctio veniam? Error natus, dolore!</p>
+          <h4>Guarder&iacutea</h4>
+          <i class="fa fa-home fa-4x" aria-hidden="true"></i>
+          <p align="justify">Cuidamos bien a tu dinosaurio cuando estés muy ocupado.</p>
         </div>
         <div class="columnasx3">
-          <h4>Título Servicios</h4>
-          <i class="fa fa-paper-plane fa-4x" aria-hidden="true"></i>
-          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, nostrum dolor omnis, ipsam nisi voluptate! Asperiores beatae ex cupiditate alias quaerat sed ad natus, saepe distinctio veniam? Error natus, dolore!</p>
+          <h4>Aseo</h4>
+          <i class="fa fa-star fa-4x" aria-hidden="true"></i>
+          <p align="justify">Cuidamos de la higiene de tu mascota a domicilio.</p>
         </div>
         <div class="columnasx3">
-          <h4>Título Servicios</h4>
-          <i class="fa fa-paper-plane fa-4x" aria-hidden="true"></i>
-          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, nostrum dolor omnis, ipsam nisi voluptate! Asperiores beatae ex cupiditate alias quaerat sed ad natus, saepe distinctio veniam? Error natus, dolore!</p>
+          <h4>Educaci&oacuten</h4>
+          <i class="fa fa-graduation-cap fa-4x" aria-hidden="true"></i>
+          <p align="justify">Te ayudamos a disciplinar a tu reptil para que no se salga de control.</p>
         </div>
       </section>
     </section>
