--- a/acerca.html
+++ b/acerca.html
@@ -46,7 +46,11 @@
         Creado por Jhonatan Torres Forero, estudiante de la Universidad Nacional de Colombia, para la asignatura 'Gr&aacutefica interactiva' en el segundo semestre del año 2017.
       </p>
       <h2>Mapa del sitio</h2>
+    </section>
+    <section class="banner-2">
       <div class="Mapa"></div>
+    </section>
+    <section class="seccion contenedor">
       <h2>Galer&iacutea</h2>
       <div class="slider">
         <div class="slider-1">
