--- a/acerca.html
+++ b/acerca.html
@@ -3,10 +3,8 @@
   <head>
     <title>Saurus - Acerca de</title>
     <meta charset="utf-8"/>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="icon" href="images/icons/Icono.ico">
-    <link rel="stylesheet" href="sss/sss.css" type="text/css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
   </head>
   <body class="Acerca">
@@ -43,12 +41,12 @@
     <section class="seccion contenedor">
       <h2>Créditos</h2>
       <p align="justify">
-        Creado por Jhonatan Torres Forero, estudiante de la Universidad Nacional de Colombia, para la asignatura 'Gr&aacutefica interactiva' en el segundo semestre del año 2017.
+        Creado por Jhonatan Torres Forero, estudiante del programa de ingeniería de Sistemas y Computaci&oacuten en la Universidad Nacional de Colombia, para la asignatura 'Gr&aacutefica interactiva' en el segundo semestre del año 2017.
       </p>
       <h2>Mapa del sitio</h2>
     </section>
     <section class="banner-2">
-      <div class="Mapa"></div>
+      <div class="Mapa img_float"></div>
     </section>
     <section class="seccion contenedor">
       <h2>Galer&iacutea</h2>
@@ -68,7 +66,7 @@
       </div>
       <h2><a href="https://goo.gl/esfGHM" target="_blank">Refrencias</a></h2>
       
-      <div class="QR"></div>
+      <div class="QR img_float"></div>
     </section>
 
     <footer class="footer">
@@ -169,7 +167,11 @@
         console.log('ejecutado');
       } 
     </script>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+
+    <!--desplazamiento en galería-->
     <script src="sss/sss.js"></script>
+    <link rel="stylesheet" href="sss/sss.css" type="text/css" media="all">
   </body>
 </html>
