--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="red">
       <div id="facebook"><a href="https://www.facebook.com" target="_blank" target="none" class="fa fa-facebook"></a></div>
       <div id="youtube"><a href="https://www.youtube.com" target="_blank" class="fa fa-youtube-play"></a></div>
-      <div id="twitter"><a href="https://www.twiter.com" target="_blank" class="fa fa-twitter"></a></div>
+      <div id="twitter"><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter"></a></div>
       <div id="correo"><a href="https://www.gmail.com" target="_blank" class="fa fa-envelope"></a></div>
     </div>
     <!--Portada del sitio-->
