--- a/acerca.html
+++ b/acerca.html
@@ -3,17 +3,17 @@
   <head>
     <title>Saurus - Acerca de</title>
     <meta charset="utf-8"/>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="icon" href="images/icons/Icono.ico">
-    <link rel="stylesheet" href="sss/sss.css" type="text/css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <link rel="icon" href="images/icons/Icono.ico">
+    <style>
+      @font-face{font-family:'icomoon';src:url(fonts/icomoon.eot?6s6d3k);src:url(fonts/icomoon.eot?6s6d3k#iefix) format("embedded-opentype"),url(fonts/icomoon.ttf?6s6d3k) format("truetype"),url(fonts/icomoon.woff?6s6d3k) format("woff"),url(fonts/icomoon.svg?6s6d3k#icomoon) format("svg");font-weight:400;font-style:normal}[class*=" icon-"]{font-family:'icomoon'!important;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.icon-menu:before{content:"\e902"}*{box-sizing:border-box}body{font-family:'Roboto',sans-serif;margin:0}.background{background:url(images/background2x.png);background-size:cover}.background .fondo{padding:20px;background:rgba(0,0,0,.3)}.seccion{color:#212F3D;margin-bottom:60px}.seccion h2{font-family:'Bitter',sans-serif;font-size:35px}.seccion p{font-family:'Roboto',sans-serif;font-size:25px}.contenedor{max-width:800px;margin:auto;position:relative}.header{position:relative}.menu{font-size:24px;display:inline-block;position:absolute;right:0}.menu li{display:inline-block;margin-left:30px}.menu a{color:#fff;text-decoration:none}.logotipo{display:inline-block;margin-left:0}.banner-2{background:url(images/jungla.jpg);width:100%;height:700px;background-size:cover;background-repeat:no-repeat;background-attachment:fixed;text-align:center}.fondo{box-sizing:border-box;height:100%}.burguer-button{width:40px;border-radius:50%;line-height:40px;height:40px;background:rgba(0,102,153,.5);display:inline-block;text-align:center;position:fixed;left:20px;top:20px;color:#fff;z-index:3;display:none}.img_float{background-size:cover;background-repeat:no-repeat;margin-left:auto;margin-right:auto}.Mapa{background-image:url(images/Referencias/mapa2x.png);width:700px;height:700px}.red{position:fixed;top:200px;z-index:100;left:0}#facebook a{background:#3b5998;padding:10px 25px;color:#fff;text-decoration:none;width:55px}#youtube a{background:#b00;padding:10px 20px;color:#fff;text-decoration:none;width:55px}#twitter a{background:#55acee;padding:10px 20px;color:#fff;text-decoration:none;width:55px}#correo a{background:#e95950;padding:10px 20px;color:#fff;text-decoration:none;width:55px}@media screen and (max-width: 950px){.red{display:none}.seccion h2{font-size:30px}.seccion p{font-size:20px}.seccion{margin-left:15px;padding-right:15px}}@media screen and (max-width: 800px){.seccion{text-align:center}}@media screen and (max-width: 710px){.Mapa{width:400px;height:400px}.banner-2{height:400px}.header{text-align:center}.logotipo{margin:0}.menu{position:static;display:block}.menu li:first-child{margin:0}.menu ul{padding:0}.background{background:url(images/background-medium.png)}.background .fondo{background:rgba(0,0,0,.3)}}@media screen and (max-width: 500px){.Mapa{width:270px;height:270px}.banner-2{height:300px}.burguer-button{display:block}.header{position:static}.header .contenedor{position:static}.menu{position:fixed;background:rgba(0,102,153,.8);left:-100%;top:0;z-index:2;bottom:0;right:0;display:flex;width:100%;align-items:center}.menu ul{flex:1}.menu li{display:block;margin:0;padding:8px 0;border-bottom:1px solid #fff}.menu li:before{display:none}.menu li:first-child{border-top:1px solid #fff}.background{background:url(images/background-min.png)}.background .fondo{background:rgba(0,0,0,.4)}}
+    </style>
   </head>
   <body class="Acerca">
     <div class="red">
       <div id="facebook"><a href="https://www.facebook.com" target="_blank" target="none" class="fa fa-facebook"></a></div>
       <div id="youtube"><a href="https://www.youtube.com" target="_blank" class="fa fa-youtube-play"></a></div>
-      <div id="twitter"><a href="https://www.twiter.com" target="_blank" class="fa fa-twitter"></a></div>
+      <div id="twitter"><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter"></a></div>
       <div id="correo"><a href="https://www.gmail.com" target="_blank" class="fa fa-envelope"></a></div>
     </div>
         <header id="header" class="header background"> <!-- header -->
@@ -43,28 +43,17 @@
     <section class="seccion contenedor">
       <h2>Créditos</h2>
       <p align="justify">
-        Creado por Jhonatan Torres Forero, estudiante de la Universidad Nacional de Colombia, para la asignatura 'Gr&aacutefica interactiva' en el segundo semestre del año 2017.
+        Creado por Jhonatan Torres Forero, estudiante del programa de ingeniería de Sistemas y Computaci&oacuten en la Universidad Nacional de Colombia, para la asignatura 'Gr&aacutefica interactiva' en el segundo semestre del año 2017.
       </p>
       <h2>Mapa del sitio</h2>
-      <div class="Mapa"></div>
-      <h2>Galer&iacutea</h2>
-      <div class="slider">
-        <div class="slider-1">
-          <img src="images/slides/1.jpg" alt="">
-        </div>
-        <div class="slider-1">
-          <img src="images/slides/2.jpg" alt="">
-        </div>
-        <div class="slider-1">
-          <img src="images/slides/3.jpg" alt="">
-        </div>
-        <div class="slider-1">
-          <img src="images/slides/4.jpg" alt="">
-        </div>
-      </div>
+    </section>
+    <section class="banner-2">
+      <div class="Mapa img_float"></div>
+    </section>
+    <section class="seccion contenedor">
       <h2><a href="https://goo.gl/esfGHM" target="_blank">Refrencias</a></h2>
       
-      <div class="QR"></div>
+      <div class="QR img_float"></div>
     </section>
 
     <footer class="footer">
@@ -165,7 +154,9 @@
         console.log('ejecutado');
       } 
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="sss/sss.js"></script>
+
+    <!--Fuentes-->
+    <link href='https://fonts.googleapis.com/css?family=Bitter|Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css"/>
   </body>
 </html>
