--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
   <head>
     <title>Saurus - Inicio</title>
     <meta charset="utf-8"/>
-    <link href='https://fonts.googleapis.com/css?family=Bitter|Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="icon" href="images/icons/Icono.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <!--Implementación del favicon-->
+    <link rel="icon" href="images/icons/Icono.ico">
+    <style>
+      @font-face{font-family:'icomoon';src:url(fonts/icomoon.eot?6s6d3k);src:url(fonts/icomoon.eot?6s6d3k#iefix) format("embedded-opentype"),url(fonts/icomoon.ttf?6s6d3k) format("truetype"),url(fonts/icomoon.woff?6s6d3k) format("woff"),url(fonts/icomoon.svg?6s6d3k#icomoon) format("svg");font-weight:400;font-style:normal}[class*=" icon-"]{font-family:'icomoon'!important;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.icon-menu:before{content:"\e902"}*{box-sizing:border-box}body{font-family:'Roboto',sans-serif;margin:0}p a{text-decoration:none;font-weight:700;color:#212F3D;border-bottom:2px solid #212F3D}.background{background:url(images/background2x.png);background-size:cover}.background .fondo{padding:20px;background:rgba(0,0,0,.3)}.button{border-radius:12px;border:none;color:#fff;padding:7px 12px;text-decoration:none;font-size:18px;background:rgba(0,102,153,1);background:-moz-linear-gradient(left,rgba(0,102,153,1) 0%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,102,153,1) 100%);background:-webkit-gradient(left top,right top,color-stop(0%,rgba(0,102,153,1)),color-stop(53%,rgba(0,153,255,1)),color-stop(53%,rgba(0,153,255,1)),color-stop(53%,rgba(0,153,255,1)),color-stop(100%,rgba(0,102,153,1)));background:-webkit-linear-gradient(left,rgba(0,102,153,1) 0%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,102,153,1) 100%);background:-o-linear-gradient(left,rgba(0,102,153,1) 0%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,102,153,1) 100%);background:-ms-linear-gradient(left,rgba(0,102,153,1) 0%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,102,153,1) 100%);background:linear-gradient(to right,rgba(0,102,153,1) 0%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,153,255,1) 53%,rgba(0,102,153,1) 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#006699',endColorstr='#006699',GradientType=1)}.titulo{font-family:'Bitter',sans-serif;font-size:70px;margin-bottom:0;margin-top:70px}.title-a{font-size:24px;margin-top:0}.seccion{color:#212F3D;margin-bottom:60px}.seccion h2{font-family:'Bitter',sans-serif;font-size:35px}.seccion p{font-family:'Roboto',sans-serif;font-size:25px}.contenedor{max-width:800px;margin:auto;position:relative}.header{position:relative}.portada{color:#fff;height:500px}.menu{font-size:24px;display:inline-block;position:absolute;right:0}.menu li{display:inline-block;margin-left:30px}.menu a{color:#fff;text-decoration:none}.logotipo{display:inline-block;margin-left:0}.fondo{box-sizing:border-box;height:100%}.burguer-button{width:40px;border-radius:50%;line-height:40px;height:40px;background:rgba(0,102,153,.5);display:inline-block;text-align:center;position:fixed;left:20px;top:20px;color:#fff;z-index:3;display:none}.video-demo{max-width:500px;width:100%;border:5px solid #3c5b6e}.video-demo-contenedor{display:flex;justify-content:center;margin-bottom:80px}.red{position:fixed;top:200px;z-index:100;left:0}#facebook a{background:#3b5998;padding:10px 25px;color:#fff;text-decoration:none;width:55px}#youtube a{background:#b00;padding:10px 20px;color:#fff;text-decoration:none;width:55px}#twitter a{background:#55acee;padding:10px 20px;color:#fff;text-decoration:none;width:55px}#correo a{background:#e95950;padding:10px 20px;color:#fff;text-decoration:none;width:55px}@media screen and (max-width: 950px){.red{display:none}.seccion h2{font-size:30px}.seccion p{font-size:20px}.seccion{margin-left:15px;padding-right:15px}}@media screen and (max-width: 800px){.titulo{font-size:45px;margin-top:30px}.title-a{font-size:18px}.portada{height:auto}.portada .button{margin-bottom:30px;display:inline-block}.video-demo-contenedor{margin-bottom:30px}.seccion{text-align:center}}@media screen and (max-width: 710px){.header{text-align:center}.logotipo{margin:0}.menu{position:static;display:block}.menu li:first-child{margin:0}.menu ul{padding:0}.background{background:url(images/background-medium.png)}.background .fondo{background:rgba(0,0,0,.3)}}@media screen and (max-width: 500px){.portada .button{display:block}.burguer-button{display:block}.portada .contenedor{position:static}.header{position:static}.menu{position:fixed;background:rgba(0,102,153,.8);left:-100%;top:0;z-index:2;bottom:0;right:0;display:flex;width:100%;align-items:center}.menu ul{flex:1}.menu li{display:block;margin:0;padding:8px 0;border-bottom:1px solid #fff}.menu li:before{display:none}.menu li:first-child{border-top:1px solid #fff}.portada{text-align:center}.titulo{font-size:30px}.video-demo-contenedor{margin:0 10px 30px}.background{background:url(images/background-min.png)}.background .fondo{background:rgba(0,0,0,.4)}}
+    </style>
   </head>
   <body>
   <!--Redes sociales-->
     <div class="red">
       <div id="facebook"><a href="https://www.facebook.com" target="_blank" target="none" class="fa fa-facebook"></a></div>
       <div id="youtube"><a href="https://www.youtube.com" target="_blank" class="fa fa-youtube-play"></a></div>
-      <div id="twitter"><a href="https://www.twiter.com" target="_blank" class="fa fa-twitter"></a></div>
+      <div id="twitter"><a href="https://www.twitter.com" target="_blank" class="fa fa-twitter"></a></div>
       <div id="correo"><a href="https://www.gmail.com" target="_blank" class="fa fa-envelope"></a></div>
     </div>
     <!--Portada del sitio-->
@@ -112,7 +114,7 @@
         </div>
       </article>
       <article class="dinosaurio"> 
-        <img class="derecha" data-src="images/edino.png|images/edino2x.png"  alt="Dinosaurio" width="350"/>
+        <img class="derecha" data-src="images/edino.png|images/edino2x.png"  alt="Dinosaurio Spinosaurus" width="350"/>
         <div class="contenedor-dinosaurio-a">
           <h3 class="title-b">Spinosaurus</h3>
           <ol>
@@ -127,7 +129,12 @@
 
     <section class="seccion contenedor" id="gracias">
       <h2>Gracias por tu visita <i class="fa fa-heart" aria-hidden="true"></i></h2>
+      <div class="GIF img_float">
+        <img src="images/gif-gracias.gif" width="100%" height="100%">
+      </div>
     </section>
+
+    <!--Pie de página con formulario de contacto-->
     <footer class="footer">
       <div class="fondo">
         <div class="contenedor">
@@ -175,12 +182,15 @@
         </div>
       </div>
     </footer>
-    <!--Librerias eternas-->
+
+    <!--Librerias exernas-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.7/hammer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.5.4/blazy.min.js"></script>
+
     <!--Iconos-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>
-    <!--Menu para moviles-->
+
+    <!--Menu para moviles con gestos de deslizar-->
     <script>
       var consulta = window.matchMedia('(max-width: 500px)');
       consulta.addListener(mediaQuery);
@@ -207,12 +217,10 @@
         }
       }
       mediaQuery();
-
       // lazy loading
       var bLazy = new Blazy({
           selector: 'img'
       });
-
       // Gestos touch
       var $body = document.body;
 
@@ -220,6 +228,7 @@
       gestos.on('swipeleft', hideMenu);
       gestos.on('swiperight', showMenu);
     </script>
+
     <!--Volver a inicio con el logo-->
     <script>
       var $img = document.getElementById('logo');
@@ -229,5 +238,11 @@
         console.log('ejecutado');
       } 
     </script>
+
+    <!--Fuentes-->
+    <link href='https://fonts.googleapis.com/css?family=Bitter|Roboto' rel='stylesheet' type='text/css'>
+
+    <!--Llamado a la hoja de estilos-->
+    <link rel="stylesheet" href="css/style.css"/>
   </body>
 </html>
